apps/monitoring/manifests/alertmanager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ignore-check.kube-linter.io/dangling-service: Check is incompatible with prometheus-operator
      CRDs
    probe-uri: /-/healthy
    reloader.homer/group: Administration
    reloader.homer/logo: https://github.com/cncf/artwork/blob/master/projects/prometheus/icon/color/prometheus-icon-color.png
    reloader.homer/name: alertmanager
    traefik.ingress.kubernetes.io/router.middlewares: auth@kubernetescrd
  labels:
    app.kubernetes.io/component: alert-router
    app.kubernetes.io/instance: main
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 0.25.0
    reloader.homer/enabled: "true"
  name: alertmanager
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: alertmanager.ankhmorpork.thaum.xyz
    http:
      paths:
      - backend:
          service:
            name: alertmanager-main
            port:
              name: web
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - alertmanager.ankhmorpork.thaum.xyz
    secretName: alertmanager-tls
